--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,3 +16,8 @@ en:
     register: "Register"
   footer:
     coppy_right: "Copyright © %{year} Job Finder - All Rights Reserved."
+  auth:
+    email: "Email"
+    password: "Password"
+    incorrect: "Email or password is incorrect"
+    success: "Login success"
