--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -63,6 +63,9 @@ vi:
     logout: "Đăng xuất"
     register: "Đăng ký"
     create_profile: "Tạo cv"
+    show_profiles: "cv của tôi"
+    edit_profile: "Chỉnh sửa"
+    delete_profile: "Xóa"
   footer:
     coppy_right: "Tìm việc làm %{year}"
   auth:
@@ -99,11 +102,45 @@ vi:
     post_fail: "Tạo công việc thất bại!"
     create_success: "Tạo CV thành công"
     create_fail: "Tạo CV thất bại"
+    profile_delete: "Xóa thành công"
+    delete_fail: "Xóa thất bại"
+    update_success: "Thay đổi đã được cập nhập"
+    update_fail: "Thay đổi thất bại"
   date:
     order:
       - :day
       - :month
       - :year
+    formats:
+      default: "%Y/%m/%d"
+      long: "%B %d, %Y"
+      short: "%b %d"
+    abbr_day_names:
+    - CN
+    - Thứ 2
+    - Thứ 3
+    - Thứ 4
+    - Thứ 5
+    - Thứ 6
+    - Thứ 7
+    abbr_month_names:
+    - Thg 1
+    - Thg 2
+    - Thg 3
+    - Thg 4
+    - Thg 5
+    - Thg 6
+    - Thg 7
+    - Thg 8
+    - Thg 9
+    - Thg 10
+    - Thg 11
+    - Thg 12
+  time:
+    formats:
+      default: "%Y/%m/%d"
+      long: "%B %d, %Y %H:%M"
+      short: "%d %b %H:%M"
   signup: "Tạo CV"
   cv:
     education: "Học vấn"
@@ -118,3 +155,4 @@ vi:
     phone: "Số điện thoại"
     remove: "Xóa"
     point: "Điểm"
+  confirmed: "Bạn chắc chắn chứ?"
