--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,17 @@ en:
       cancel: "Cancel"
       user_not_found: "User not found!"
       profile_not_found: "Profile not found!"
+    apply:
+      apply_job: "Apply Job"
+      list_candidate: "Candidate list"
+      candidate: "Candidate"
+      status: "Status"
+      action: "Action"
+      post_title: "Post title"
+      approved_success: "Approved success!"
+      approved_fail: "Approved fail!"
+    view_cv: "View CV"
+    confirm: "Confirm"
   static_pages:
     home: 
       title: "Home"
