--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -117,6 +117,21 @@ vi:
               blank: "không được để trống"
             end_date:
               blank: "không được để trống"
+        profile:
+          attributes:
+            education:
+              blank: "không thể để trống"
+              too_long: "Tối thiểu 250 ký tự"
+            phone:
+              blank: "không thể để trống"
+              too_long: "Tối đa 10 ký tự "
+            email:
+              blank: "không thể để trống"
+              invalid: "Chưa đúng định dạng"
+              too_long: "Tối đa 100 ký tự "
+            address:
+              blank: "không thể để trống"
+              too_long: "Tối thiểu 250 ký tự"
   notification:
     post_success: "Tạo công việc thành công!"
     post_fail: "Tạo công việc thất bại!"
@@ -181,3 +196,4 @@ vi:
   select_cv: "Chọn CV"
   cancel_job: "Hủy nộp cv"
   apply_error: "không thể nộp CV"
+  until_now: "Cho đến hiện tại"
