add_gem_ransack

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
       update_success: "Update info company success"
       update_fail: "Update info company fail"
       not_found: "Not found"
+    search: "Search"
   static_pages:
     home: 
       title: "Home"
