--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,8 @@ en:
       approved_success: "Approved success!"
       approved_fail: "Approved fail!"
       manage: "Candidate management"
+      cancel_success: "Cancel job success"
+      cancel_fail: "Cancel job fail"
     view_cv: "View CV"
     confirm: "Confirm"
     company:
@@ -237,3 +239,12 @@ en:
   apply_error: "Apply fail"
   until_now: "Until now"
   authorized: "You are not authorized to access this page."
+  status:
+    pending: "Pending"
+    approved: "Approved"
+    cancel: "Cancel"
+  email:
+    hi: "Hello"
+    subject: "Candidate announcement"
+    approved_job: "Your CV has been approved"
+    cancel_job: "Your CV is not accepted"
