--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -55,6 +55,8 @@ vi:
       approved_success: "Phê duyệt thành công!"
       approved_fail: "Phê duyệt thất bại!"
       manage: "Quản lý ứng viên"
+      cancel_success: "Hủy thành công"
+      cancel_fail: "Hủy thất bại"
     view_cv: "Xem CV"
     confirm: "Xác nhận"
     company:
@@ -250,3 +252,12 @@ vi:
       user:
         signed_in: "Đăng nhập thành công!"
   authorized: "Bạn không có quyền truy cập trang này."
+  status:
+    pending: "Đang chờ duyệt"
+    approved: "Đã duyệt"
+    cancel: "Hủy"
+  email:
+    hi: "Xin chào"
+    subject: "Thông báo ứng viên"
+    approved_job: "CV của bạn đã được chấp thuận"
+    cancel_job: "CV của bạn không được chấp nhận"
